Fix rolling links css

--- a/css/theme/black.css
+++ b/css/theme/black.css
@@ -31,6 +31,7 @@
   --headingFontWeight: 600;
   --linkColor: #42affa;
   --linkColorHover: #8dcffc;
+  --linkColorRolling: #068de9;
   --selectionBackgroundColor: #bee4fd;
 
   --heading1Size: 2.5em;
