--- a/css/criteo.css
+++ b/css/criteo.css
@@ -1,4 +1,23 @@
-@import './theme/light.css';
+@import './theme/dark.css';
+
+:root {
+  --mainFontSize: 42px;
+  --mainFont: Arial;
+  --headingFont: 'Century Gothic';
+  --headingTextShadow: none;
+  --headingLetterSpacing: normal;
+  --headingTextTransform: uppercase;
+  --headingFontWeight: 600;
+  --linkColor: #f26223;
+  --linkColorHover: #ff891f;
+  --linkColorRolling: #f26223;
+  --selectionBackgroundColor: #ff891f;
+
+  --heading1Size: 2.2em;
+  --heading2Size: 1.6em;
+  --heading3Size: 1.2em;
+  --heading4Size: 1em;
+}
 
 .criteo .progress {
   background: transparent;
