--- a/css/theme/template/theme.css
+++ b/css/theme/template/theme.css
@@ -307,13 +307,27 @@ body {
  *********************************************/
 
 .reveal .progress {
-  background: rgba(0, 0, 0, 0.2);
+  background: transparent;
   color: var(--linkColor);
 }
 .reveal .progress span {
   -webkit-transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
   -moz-transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
   transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
+  background: linear-gradient(
+    to right,
+    var(--linkColor),
+    var(--linkColorHover)
+  );
+}
+
+/*********************************************
+ * SLIDE NUMBER
+ *********************************************/
+
+.reveal .slide-number {
+  background-color: transparent;
+  color: var(--mainColor);
 }
 
 /*********************************************
